--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -25,6 +25,8 @@ rich==14.0.0
 rich-toolkit==0.14.7
 shellingham==1.5.4
 sniffio==1.3.1
+sqlalchemy==2.0.41
+sqlmodel==0.0.24
 starlette==0.46.2
 typer==0.16.0
 typing-extensions==4.14.0
